# grpo-robots

./: .gitignore  README.md  peg-insert-side-v2_expert.hdf5  pyproject.toml
src/grpo_robots/: __init__.py  bc_learner.py  dataset.py  evaluation.py  grpo_learner.py  networks.py  ppo_learner.py  train_bc.py  train_grpo.py  train_ppo.py  train_state.py  utils.py
