[project]
name = "grpo-robots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.5.2",
    "flax>=0.10.4",
    "distrax>=0.1.5",
    "optax>=0.2.4",
    "metaworld",
    "tqdm>=4.67.1",
    "h5py>=3.13.0",
    "wandb>=0.19.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
metaworld = { git = "https://github.com/pranavnt/Metaworld", rev = "ebd041681662fe3f4bb4267d78fd2a510c64aa00" }
